wordpress-example/v2/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: wordpress
    tier: frontend
  name: wordpress
  namespace: kube-example
spec:
  rules:
    - host: wordpress.heian.com
      http:
        paths:
          - backend:
              serviceName: wordpress
              servicePort: web
            path: /
